test/2/type/poly-unconstrained.ploy
extensible f;
f += fn ()%Int 0;
f += fn ()%Str 'a';

main = {
  g = f
}
